fixed inspections and removed unnecessary comments

--- a/src/Resources/views/Email/trustpilot.html.twig
+++ b/src/Resources/views/Email/trustpilot.html.twig
@@ -1,6 +1,4 @@
-{% block subject %}
-
-{% endblock %}
+{% block subject %}{% endblock %}
 
 {% block body %}
 <script type="application/json+trustpilot">
