--- a/src/Resources/views/Order/Show/_trustpilot.html.twig
+++ b/src/Resources/views/Order/Show/_trustpilot.html.twig
@@ -1,4 +1,4 @@
-<div class="ui segment" id="trustpilot">
+<div class="ui segment" id="setono-trustpilot">
     <span class="ui blue top attached label">
         <i class="envelope icon"></i>
         {{ 'setono_sylius_trustpilot.ui.segment.header'|trans }}
