Adds an initial state to the invitation workflow

--- a/src/Resources/views/admin/grid/label/invitation_state.html.twig
+++ b/src/Resources/views/admin/grid/label/invitation_state.html.twig
@@ -1,6 +1,7 @@
 {%
     set viewOptions = {
         failed: { icon: 'ban', color: 'red' },
+        initial: { icon: 'clock', color: 'gray' },
         pending: { icon: 'clock', color: 'olive' },
         processing: { icon: 'check', color: 'violet' },
         sent: { icon: 'check', color: 'green' },
