--- a/src/Resources/views/admin/grid/label/invitation_state.html.twig
+++ b/src/Resources/views/admin/grid/label/invitation_state.html.twig
@@ -1,16 +1,24 @@
+{# @var \Setono\SyliusTrustpilotPlugin\Model\InvitationInterface data #}
 {%
     set viewOptions = {
         failed: { icon: 'ban', color: 'red' },
+        ineligible: { icon: 'ban', color: 'red' },
         initial: { icon: 'clock', color: 'gray' },
         pending: { icon: 'clock', color: 'olive' },
         processing: { icon: 'check', color: 'violet' },
         sent: { icon: 'check', color: 'green' },
 }
 %}
+{% set value = 'setono_sylius_trustpilot.ui.' ~ data.state %}
 
-{% set value = 'setono_sylius_trustpilot.ui.' ~ data %}
+{% set popupClass = '' %}
+{% set popupHtml = '' %}
+{% if data.ineligible or data.failed %}
+    {% set popupClass = ' invitation-popup' %}
+    {% set popupHtml = '<ul class="ui list"><li>' ~ data.processingErrors|join('</li><li>') ~ '</li></ul>' %}
+{% endif %}
 
-<span class="ui {{ viewOptions[data]['color'] }} label">
-    <i class="{{ viewOptions[data]['icon'] }} icon"></i>
+<span class="ui {{ viewOptions[data.state]['color'] }} label invitation-state{{ popupClass }}" data-html="{{ popupHtml|e('html_attr') }}">
+    <i class="{{ viewOptions[data.state]['icon'] }} icon"></i>
     {{ value|trans }}
 </span>
